--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             line-height: 1.5;
             color: #333;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #223ac2 0%, #7241a3 100%);
             min-height: 100vh;
         }
 
@@ -427,8 +427,8 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Rent instead of buying</h1>
-        <p class="hero-subtitle">Nearby and at times that suit you</p>
+        <h1>Borrow Anything, Anywhere</h1>
+        <p class="hero-subtitle">From camera gear to power tools, find what you need or earn money from what you own</p>
         
         <!-- Search Bar -->
         <div class="search-container">
